--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -746,6 +746,12 @@ margin on the iframe, cause it breaks stuff. */
 
 body:not(.post-template) .post-title {
     font-size: 3.6rem;
+    display: inline;
+}
+
+.post-header {
+    height: 40px;
+    margin-bottom: 20px;
 }
 
 .post-title a {
@@ -763,8 +769,8 @@ body:not(.post-template) .post-title {
 }
 
 .post-meta {
+    height: 40px;
     display: block;
-    margin: 1.75rem 0 0 0;
     font-family: "Open Sans", sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
@@ -795,13 +801,15 @@ body:not(.post-template) .post-title {
 }
 
 .post-date {
-    display: inline-block;
+    display: inline;
     margin-left: 8px;
     padding-left: 12px;
     border-left: #d5dbde 1px solid;
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
+    float: right;
+    line-height: 40px;
 }
 
 .user-image {
@@ -885,10 +893,14 @@ body:not(.post-template) .post-title {
 /* Keep images centred and within the bounds of the post-width */
 .post-content img {
     display: block;
-    max-width: 100%;
+    width: 50%;
     height: auto;
     margin: 0 auto;
     padding: 0.6em 0;
+}
+
+.post-content p{
+    font-family: sans-serif;
 }
 
 /* Break out larger images to be wider than the main text column
